# ai-character-chat

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
memory/: qdrant.py  repository.py
npc/: behavior.py  brain.py  models.py
npc_memory_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plans/: architecture.md  backend-plan.md  character-system.md  docker-plan.md  frontend-plan.md  implementation-summary.md  ollama-integration.md  stage1-plan.md
world/: models.py  rooms.py  state.py
